--- a/views/packages.ejs
+++ b/views/packages.ejs
@@ -1,3 +1,4 @@
+<div class="container" id="packages">
 	<h2>All Swift Packages</h2>
 	<table class="table table-striped table-hover">
 		<thead class="thead-dark">
@@ -16,3 +17,4 @@
 	  <% }); %>
 	  </tbody>
 	</table>
+</div>
