don't duplicate tags

--- a/views/repo.ejs
+++ b/views/repo.ejs
@@ -16,7 +16,7 @@
 	    			<span class="fa fa-github"></span> <%= package.full_name %>
 	 			</a>
 
-	 			<% if (package.github_release_tag) { %>
+	 			<% if (package.github_release_tag && package.github_release_tag != package.github_default_branch) { %>
 	 			<div class="card my-md-3">
 	 				<div class="card-body">
 						<pre class="my-md-0">.Package(url: "<%= package.github_clone_url %>", from: "<%= package.github_release_tag.replace("v", "") %>")</pre>
