fix for mobile devices

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 </form>
 
 <div class="row">
-<div class="col-8">
+<div class="col-sm-8">
 	<h2>Popular Swift Packages</h2>
 	<table class="table table-striped table-hover">
 		<thead class="thead-dark">
@@ -33,7 +33,7 @@
 	</table>
 	
 </div>
-<div class="col-4">
+<div class="col-sm-4">
 	<h2>New Swift Packages</h2>
 	<ul class="list-group list-group-flush">
 	  <% recently_created_packages.forEach(function(package){ %>
