--- a/views/repo.ejs
+++ b/views/repo.ejs
@@ -46,13 +46,13 @@
 
 			<div class="row">
 
-			<div class="col-8">
+			<div class="col-sm-8">
 				<div class="readme">
 					<%- package.readme_html %>
 				</div>
 			</div>
 
-			<div class="col-4">
+			<div class="col-sm-4">
 				<h3>Description</h3>
 				<h4>Swift Tools <%= package.swift_tool_version %></h4>
 				<pre class="pre-scrollable"><%= package.swift_describe_raw %></pre>
