don't shrink github button

--- a/views/repo.ejs
+++ b/views/repo.ejs
@@ -12,7 +12,7 @@
 					<h2 class="d-inline"><%= package.name %></h2>
 					<h3 class="d-inline text-muted"><%= package.github_release_tag %></h3>
 				</div>
-				<a class="btn btn-block btn-social btn-github w-50" href="<%=package.github_html_url %>">
+				<a class="btn btn-block btn-social btn-github" href="<%=package.github_html_url %>">
 	    			<span class="fa fa-github"></span> <%= package.full_name %>
 	 			</a>
 
