--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,4 +1,5 @@
 <div class="container" id="add">
+	<h2>Add a package</h2>
 	<form action="/add" method="post" class="form">
 		<div class="input-group">
 	    <input class="form-control form-control-lg" type="url" placeholder="https://github.com/%s/%s" id="url" name="url">
@@ -8,4 +9,5 @@
 	    </input>
 	    </div>
 	</form>
+	<p class="text-muted">Public repositories can be added</p>
 </div>
