--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="container" id="index">
 
-<form class="form my-md-3" action="/search" method="GET">
+<form class="form my-3" action="/search" method="GET">
 	<div class="input-group">
     <input class="form-control form-control-lg" type="text" placeholder="Search Swift Package Registry" id="term" name="term">
     <span class="input-group-append">
@@ -13,7 +13,7 @@
 <div class="row">
 <div class="col-sm-8">
 	<h2>Popular Swift Packages</h2>
-	<table class="table table-striped table-hover">
+	<table class="table table-responsive table-striped table-hover">
 		<thead class="thead-dark">
 			<tr>
 			<th scope="col">Repository</th>
