--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,8 +18,8 @@
 
     </head>
     <body>
-        <div class="container my-md-2">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light rounded my-md-3">
+        <div class="container my-2">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light rounded my-3">
                 <a class="navbar-brand" href="/">
                 <img src="/images/Swift_logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 Swift Package Registry</a>
