--- a/views/packages.ejs
+++ b/views/packages.ejs
@@ -1,6 +1,6 @@
 <div class="container" id="packages">
 	<h2>All Swift Packages</h2>
-	<table class="table table-striped table-hover">
+	<table class="table table-responsive table-striped table-hover">
 		<thead class="thead-dark">
 			<tr>
 			<th scope="col">Repository</th>
