--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,7 +9,7 @@
 </form>
 
 <h2>Swift Packages</h2>
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover table-responsive">
 	<thead class="thead-dark">
 		<tr>
 		<th scope="col">Repository</th>
