--- a/views/repo.ejs
+++ b/views/repo.ejs
@@ -29,10 +29,14 @@
 				<div class="containe">
 					<h2 class="d-inline"><%= package.name %></h2>
 					<h3 class="d-inline text-muted"><%= package.github_release_tag %></h3>
+
+					<span class="float-right"><a class="github-button" href="https://github.com/<%= package.full_name %>" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star <%= package.full_name %> on GitHub">Star</a></span>
 				</div>
 				<a class="btn btn-block btn-social btn-github" href="<%=package.github_html_url %>">
 	    			<span class="fa fa-github"></span> <%= package.full_name %>
 	 			</a>
+
+				
 
 	 			<% if (package.github_release_tag && package.github_release_tag != package.github_default_branch) { %>
 	 			<div class="card my-md-3">
