Improved add and login

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -9,5 +9,5 @@
 	    </input>
 	    </div>
 	</form>
-	<p class="text-muted">Public repositories can be added</p>
+	<small class="text-muted container">Only public repositories can be added to the <a href="/">Swift Package Registry</a></small>
 </div>
