--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,7 +46,7 @@
                 <%- body %>
             </main>
 
-            <footer class="pt-4 my-md-3 pt-md-5 border-top">
+            <footer class="pt-4 my-3 pt-md-5 border-top">
                 <div class="container">
                     <div class="row">
                         <div class="col">
