--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,14 @@
-<div class="card mx-auto w-50">
-<h5 class="card-header">Login</h5>
-  <div class="card-body">
-   <a class="btn btn-block btn-social btn-github" href="/auth/github">
-    <span class="fa fa-github"></span> Sign in with GitHub
- </a>
- </div>
+<div class="container" id="login">
+	<div class="row justify-content-md-center">
+	<div class="col-sm-auto col-md-6">
+		<div class="card">
+			<h5 class="card-header">Login</h5>
+			<div class="card-body">
+			    <a class="btn btn-block btn-social btn-github" href="/auth/github">
+			    	<span class="fa fa-github"></span> Sign in with GitHub
+			 	</a>
+			 </div>
+		 </div>
+	 </div>
+	 </div>
  </div>
