--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,5 @@
 <div class="container" id="search">
-<form class="form d-inline w-100 my-3" action="/search" method="GET">
+<form class="form my-3" action="/search" method="GET">
 	<div class="input-group">
     <input class="form-control form-control-lg" type="text" placeholder="Search Swift Package Registry" id="term" name="term" value="<%= term %>">
     <span class="input-group-append">
