--- a/views/repo.ejs
+++ b/views/repo.ejs
@@ -26,13 +26,29 @@
 			<pre><%= package.processing_error %></pre>
 		<% } else { %>
 			<div class="jumbotron py-3">
-				<div class="containe">
-					<h2 class="d-inline"><%= package.name %></h2>
-					<h3 class="d-inline text-muted"><%= package.github_release_tag %></h3>
-
-					<span class="float-right"><a class="github-button" href="https://github.com/<%= package.full_name %>" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star <%= package.full_name %> on GitHub">Star</a></span>
+				<div class="row">
+					<div class="col">
+						<div class="d-flex">
+							<h2 class="align-self-baseline"><%= package.name %></h2>
+							<h3 class="flex-fill align-self-baseline text-muted mx-1"><%= package.github_release_tag %></h3>
+						</div>
+					</div>
+					<div class="col d-flex">
+						<span class="align-self-baseline align-self-end ml-auto"><a class="github-button" href="https://github.com/<%= package.full_name %>" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star <%= package.full_name %> on GitHub">Star</a></span>
+					</div>	
 				</div>
-				<a class="btn btn-block btn-social btn-github" href="<%=package.github_html_url %>">
+
+				<div><%= package.github_description %></div>
+
+				<% if(package.github_topics) { %>
+					<div class="my-3">
+					<% package.github_topics.forEach(function(tag) { %>
+						<a class="badge badge-primary" href="/search?topic=<%= tag %>"><%= tag %></a>
+					<% }) %>
+					</div>
+				<% } %>
+
+				<a class="btn btn-block btn-social btn-github my-3" href="<%=package.github_html_url %>">
 	    			<span class="fa fa-github"></span> <%= package.full_name %>
 	 			</a>
 
@@ -56,7 +72,14 @@
 				<div class="card my-md-3">
 					<h3 class="card-header">What's New</h3>
 					<div class="card-body whatsnew">
-						<h3 class="card-title"><%= package.github_release_name %></h3>
+						<% if (package.github_release_html_url) { %>
+							<h3 class="card-title"><a href="<%= package.github_release_html_url %>"><%= package.github_release_name %></a></h3>
+						<% } else { %>
+							<h3 class="card-title"><%= package.github_release_name %></h3>
+						<% } %>
+						<% if (package.github_release_date) { %>
+							<h6 class="text-muted card-subtitle"><%= package.github_release_date %></h6>
+						<% } %>
 						<div class="card-text">
 							<%- package.github_release_body %>
 						</div>
@@ -139,6 +162,22 @@
 				</div>
 				
 			</div>
+			</div>
+
+			<small class="text-muted">Last updated: <%= package.updatedAt %></small>
+
+			<% if (user && repo_info && repo_info.owner.id == user.github_id) { %>
+				<div class="card my-3">
+					<div class="card-header"><h3>Owner Tools</h3></div>
+					<div class="card-body">
+						<form action="/add" method="post">
+							<input name="url" id="url" type="hidden" value="<%= package.github_html_url %>" />
+							<button type="submit" class="btn btn-primary btn-sm">Refresh</button>
+						</form>
+					</div>
+					<div class="card-footer text-muted">These tools are only visible to the repository owner</div>
+				</div>
+			<% } %>
 		<% } %>
 	<% } %>
 </div>
